--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "axios": "^1.7.9",
     "bullmq": "^5.40.0",
     "cors": "^2.8.5",
     "cron": "^3.5.0",
@@ -23,12 +24,16 @@
     "ffmpeg-static": "^5.2.0",
     "flocli": "^1.2.5",
     "fluent-ffmpeg": "^2.1.3",
+    "framer-motion": "^12.4.5",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.1",
+    "react-scroll": "^1.9.3",
     "whisper-node": "^1.1.1"
   },
   "devDependencies": {
@@ -39,6 +44,7 @@
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-react": "^4.3.1",
